--- a/app/index.html
+++ b/app/index.html
@@ -1,60 +1,59 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html ng-app="App">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <title>SjS</title>
+    <meta name="description" lang="en" content="Scott j Sullivan's Web Portfolio"/>
+    <meta name="author" content="Scott j Sullivan">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="http://code.angularjs.org/1.2.8/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.8/angular-route.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.8/angular-sanitize.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/lightbox-2.6.min.js"></script>
+    <link href="css/styles.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   </head>
-  <body ng-app="sjSportfolioSiteApp">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+  <body ng-controller="AppController">
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <div id="side-bar">
+      <a href="#" class="logo">
+        <h1>SjS<small>portfolio</small></h1>
+        <span id="circle"></span>
+      </a>
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+      <h3>Portfolio</h3>
+      <ul class="nav">
+        <li><a href="#microsite">Microsite Template</a></li>
+        <li><a href="#useful">Useful Scripts</a></li>
+        <li><a href="#healthy">Healthy Brown Bag</a></li>
+        <li><a href="#hackney">Hackney Gym</a></li>
+        <li><a href="#registration">Registration Page</a></li>
+        <li><a href="#cake">Cake Magazine</a></li> 
+        <li><a href="#apfci">American Predator</a></li>
+        <li><a href="#design">Design Catalog</a></li>
+        <li><a href="#fascist">Fascist Nation</a></li>
+        <li><a href="#starter">Starter Kit</a></li>
+        <li><a href="#bottled">Bottled Up Brews</a></li>
+        <li><a href="#oldport">Old Portfolio Site</a></li>
+        <!-- <li><a href="#missingperson">mPersons Music</a></li> -->
+      </ul>
 
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
+      <h3>Info</h3>
+      <ul class="nav">
+        <!-- <li><a href="#photography">Photography</a></li> -->
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#misc">Misc</a></li>
+      </ul>
+    </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+    <div id="views" ng-view></div>
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
-</body>
+
+  </body>
 </html>
+
+
