--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/lightbox-2.6.min.js"></script>
-    <link href="css/styles.css" type="text/css" rel="stylesheet">
+    <link href="styles/main.css" type="text/css" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   </head>
